// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxFieldArray expect to render with default checked fields 1`] = `
<Fragment>
  <Checkbox
    className=""
    id="12345"
    isChecked={false}
    isDisabled={false}
    isValid={true}
    key="12345"
    label="pci"
    name="policies[0]"
    onChange={[Function]}
    value="12345"
  />
  <Checkbox
    className=""
    id="1111"
    isChecked={true}
    isDisabled={false}
    isValid={true}
    key="1111"
    label="hipaa"
    name="policies[1]"
    onChange={[Function]}
    value="1111"
  />
</Fragment>
`;

exports[`CheckboxFieldArray expect to render without default checked fields 1`] = `
<Fragment>
  <Checkbox
    className=""
    id="12345"
    isChecked={false}
    isDisabled={false}
    isValid={true}
    key="12345"
    label="pci"
    name="policies[0]"
    onChange={[Function]}
    value="12345"
  />
  <Checkbox
    className=""
    id="1111"
    isChecked={false}
    isDisabled={false}
    isValid={true}
    key="1111"
    label="hipaa"
    name="policies[1]"
    onChange={[Function]}
    value="1111"
  />
</Fragment>
`;
